--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
       <div class="gallery-container">
         <!-- Sample product items -->
         <div class="product-item">
-          <img src="C:\Users\aswin\Downloads\freefire1.jpg" alt="premium ID" />
+          <img src="C:\freefire1.jpg" alt="premium ID" />
           <p>premium ID</p>
         </div>
         <div class="product-item">
-          <img src="C:\Users\aswin\Downloads\freefire1.jpg" alt="worth ID" />
+          <img src="C:\freefire1.jpg" alt="worth ID" />
           <p>worth ID</p>
         </div>
         <div class="product-item">
-          <img src="C:\Users\aswin\Downloads\freefire1.jpg" alt="premium ID" />
+          <img src="C:\freefire1.jpg" alt="premium ID" />
           <p>premium ID</p>
         </div>
         <!-- You can add more products similarly -->
